<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--     <string name="app_name">testVolley</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string> -->
    
    <string name="app_name">友听</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_search">MySearchActivity</string>
    <string name="title_activity_my_register">MyRegisterActivity</string>
    <string name="title_activity_user_info_setting">UserInfoSettingActivity</string>
    <string name="title_activity_my_login">MyLoginActivity</string>
    <string name="username_hint">输入账号</string>
    <string name="username_input">账号</string>
    <string name="password_hint">输入密码</string>
    <string name="password_input">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登录</string>
    <string name="zhuce">注册</string>
    <string name="my_mood">暂无心情</string>
    <string name="title_activity_my_mood">MyMoodActivity</string>
    <string name="title_activity_my_message">MyMessageActivity</string>
    <string name="title_activity_my_friends">MyFriendsActivity</string>
    <string name="title_activity_my_second_mood">MySecondMoodActivity</string>
    <string name="there_is_no_lyric_yet">暂无歌词</string>
   <!-- wuman  -->
    <!-- <string name="app_name">YouTing</string> -->
	<string name="text_musicName">歌曲名称</string>
	<string name="text_myMusic">我的音乐</string>
	<string name="text_allMusic">全部音乐</string>
	<string name="text_playingMusic">播放列表</string>
	<string name="text_footerText">正在播放的音乐</string>
	<string name="text_deletePlayListMusics">清空列表</string>
	<string name="text_gequbucunzai">歌曲已经不存在,尝试刷新或检查SD卡</string>
   <!-- wuman  -->
</resources>
